[PE] Correct anchor position in printed subframe

When a subframe initiates printing, all coordinates should be in the
subframe's space, so we should not map anchors to the root frame.

Bug: 808057

Change-Id: I8714cfaddc1bd5471da2561f69ef92994d57c559
Reviewed-on: https://chromium-review.googlesource.com/894464
Commit-Queue: Xianzhu Wang <wangxianzhu@chromium.org>
Reviewed-by: David Bokan <bokan@chromium.org>
Cr-Commit-Position: refs/heads/master@{#533723}
Former-commit-id: 11b92d75fea81c74ce5c9d3e71a5088bd1a4ff20